--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(auto, auto);
   align-items: end;
-  row-gap: 20px;
+  gap: 30px;
 }
 .box1 {
   grid-column-start: 1;
@@ -35,4 +35,12 @@
   grid-row-start: 4;
   grid-row-end: 5;
   justify-self: center;
+}
+
+#myTable {
+    width: 100%;
+}
+
+#myTable th, td {
+    padding: 15px;
 }
