--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*CSS GRID layout*/
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -37,10 +38,27 @@
   justify-self: center;
 }
 
+/*TABLE Styling*/
 #myTable {
-    width: 100%;
+  width: 100%;
 }
 
-#myTable th, td {
-    padding: 15px;
+#myTable th,
+td {
+  padding: 15px;
+  text-align: center;
+}
+
+/*Modal for Search*/
+.modal {
+  display: none;
+  position: fixed;
+  padding-top: 50px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.5);
 }
