--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 /*CSS GRID layout*/
+* {
+  box-sizing: border-box;
+}
 .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -16,7 +19,7 @@
 }
 .box1_5 {
   grid-column-start: 3;
-  grid-column-end: 4;
+  grid-column-end: -1;
   grid-row-start: 1;
   grid-row-end: 3;
   align-self: center;
@@ -69,10 +72,25 @@ td {
   padding: 20px;
   margin: auto;
   width: 75%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 15px;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
+}
+
+#modal-column1 {
+  grid-column: 1, 3;
+}
+
+#modal-column2 {
+  grid-column: 4, 6;
+}
+
+#modal-column3 {
+  grid-column: 6, 7;
 }
 
 .close-btn {
